# src/routes/auth.route.js
@@ -1,7 +1,8 @@
 import { Router } from 'express';
-import { login, infoToken } from '../controllers/auth.controller.js';
+import { login, infoToken, refreshToken, logout } from '../controllers/auth.controller.js';
 import { bodyLoginValidator } from '../middlewares/validator.manager.js';
 import { requireToken } from '../middlewares/require.token.js';
+import { requireRefreshToken } from '../middlewares/require.refresh.token.js'
 
 const router = Router();
 
@@ -22,6 +23,23 @@ router.post('/v1/login', bodyLoginValidator, async(req, res) => {
     await login(req, res);
 });
 
+router.post('/v1/refresh', requireRefreshToken, async(req, res) => {
+    /*
+       #swagger.tags = ['Auth']
+       #swagger.security = [{
+           "Authorization": []
+       }]
+   
+       #swagger.parameters['auth'] = {
+           description: "Refresh Token",
+           in: 'body',
+           required: true,
+           schema: { $ref: "#definitions/LoginModel"}
+       } 
+   */
+   await refreshToken(req, res);
+});
+
 router.get('/v1/info', requireToken, async(req, res) => {
     /*
         #swagger.tags = ['Auth']
@@ -30,6 +48,17 @@ router.get('/v1/info', requireToken, async(req, res) => {
         }] 
     */
     await infoToken(req, res);
+   
+});
+
+router.get('/v1/logout', async(req, res) => {
+    /*
+        #swagger.tags = ['Auth']
+        #swagger.security = [{
+            "Authorization": []
+        }] 
+    */
+    await logout(req, res);
    
 });
 
